fix nav menu issue

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Dave Haynes</title>
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <!-- <link rel="stylesheet" href="css/jquery.mobile-1.4.5.css"> -->
-  <link rel="stylesheet" href="css/style-first.css">
+  <link rel="stylesheet" href="css/style.css">
   <script src='js/jquery.js'></script>
   <script src='js/jquery.touchSwipe.min.js'></script>
   <script src='js/underScore.js'></script>
@@ -19,7 +19,7 @@
             <li class="hide expand-menu menu">Home</li>
   					<li class="hide expand-menu menu">About</li>
   					<li class="hide expand-menu menu">Skills</li>
-  					<li class="hide expand-menu menu">Projects</li>
+  					<li class="hide expand-menu menu">Portfolio</li>
   					<li class="hide expand-menu menu">Contact</li>
 				</ul>
 				<!-- <div id="burger"><img src="assets/burgerIcon.png" alt="Menu" id='burger-img'></div> -->
@@ -135,6 +135,6 @@
     </ul>
   </div>
 
-  <link rel="stylesheet" href="css/style-second.css">
+  <!-- <link rel="stylesheet" href="css/style-second.css"> -->
 </body>
 </html>
