--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <title>Dave Haynes</title>
   <link rel="stylesheet" href="css/bootstrap.min.css">
-  <!-- <link rel="stylesheet" href="css/jquery.mobile-1.4.5.css"> -->
   <link rel="stylesheet" href="css/style.css">
+  <link rel="shortcut icon" type="image/x-icon" href="assets/favicon.ico" />`
   <script src='js/jquery.js'></script>
   <script src='js/jquery.touchSwipe.min.js'></script>
   <script src='js/underScore.js'></script>
